config/samples/orange/rickaastley/network-policies/network-policies.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nifi-intra-nodes
spec:
  podSelector:
    matchLabels: &labels_selector
      app: nifi
  ingress:
    - from:
      - namespaceSelector:
          matchLabels: *labels_selector
      ports: &intranodes_ports
        - port: 6007
          protocol: TCP
        - port: 8443
          protocol: TCP
  egress:
    - ports: *intranodes_ports
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nifi-to-zookeeper
spec:
  podSelector:
    matchLabels: &labels_selector
      app: nifi
  egress:
    - ports:
      - port: 2181
        protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nifi-to-dex
spec:
  podSelector:
    matchLabels:
      app: nifi
  egress:
    - ports:
        - port: 32000
          protocol: TCP
        - port: 5556
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: traefik-to-nifi
spec:
  podSelector:
    matchLabels: &labels_selector
      app: nifi
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: "traefik"
      ports:
        - port: 6007
          protocol: TCP
        - port: 8443
          protocol: TCP
  egress:
    - {}
#---
#apiVersion: crd.projectcalico.org/v1
#kind: NetworkPolicy
#metadata:
#  name: nifi-to-zookeeper
#spec:
#  selector: app == 'nifi' && nifi_cr == 'nifisec'
#  types:
#    - Egress
#  egress:
#    - action: Allow
#      protocol: TCP
#      source:
#        selector: app == 'nifi' && nifi_cr == 'nifisec'
#      destination:
#        ports:
#          - 2181
#---
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: allow-all-ingress
spec:
  ingress:
    - action: allow
      source:
        selector: app == 'nifi'
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: allow-all-egress
spec:
  egress:
    - action: allow
      source:
        selector: app == 'nifi'

---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: nifikop-allow-all-ingress
spec:
  ingress:
    - action: allow
      source:
        selector: app == 'nifikop'
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: nifikop-allow-all-egress
spec:
  egress:
    - action: allow
      source:
        selector: app == 'nifikop'

# apiVersion: crd.projectcalico.org/v1
  #kind: NetworkPolicy
  #metadata:
  #  name: allow-icmp
  #spec:
  #  selector: app == 'nifi'
  #  ingress:
  #    - action: Allow
  #      protocol: ICMP
  #      source:
  #        selector: app == 'nifi'
